--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,6 +42,14 @@ jobs:
         run: |
           docker compose up -d
 
+      - name: Cache SAM Local build
+        uses: actions/cache@v3
+        with:
+          path: sam/.aws-sam/build
+          key: ${{ runner.os }}-samlocal-${{ hashFiles('sam/template.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-samlocal-
+
       - name: Deploy samlocal
         working-directory: ./sam
         run: |
